--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* style.css */
+
 body {
   background-color: #162029;
   color: white;
@@ -14,34 +14,33 @@ header {
   width: 150px;
   margin-bottom: 1rem;
 }
-h1, h2 {
+h1, h2, h3, h4 {
   color: #e4a342;
 }
-nav ul.nav-menu {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  list-style: none;
+input#searchInput {
+  width: 80%;
+  max-width: 500px;
+  padding: 0.5rem;
+  margin: 1rem auto;
+  display: block;
+  font-size: 1rem;
 }
-.nav-menu li {
-  margin: 0 10px;
-}
-.nav-menu a {
-  color: white;
-  text-decoration: none;
-}
-.nav-menu a:hover {
-  text-decoration: underline;
-}
-.product-category {
+.category, .product {
   padding: 1rem 2rem;
-}
-.product {
+  margin-bottom: 1rem;
   background-color: #1e2b36;
-  margin: 1rem 0;
-  padding: 1rem;
   border-radius: 8px;
+}
+.expandable {
+  cursor: pointer;
+  padding: 0.5rem 0;
+}
+.product-list, .details {
+  display: none;
+  padding-left: 1rem;
+}
+.open {
+  display: block;
 }
 ul {
   list-style-type: disc;
@@ -54,13 +53,10 @@ footer {
   font-size: 0.9rem;
 }
 @media (max-width: 768px) {
-  .product-category {
-    padding: 1rem;
-  }
   .logo {
     width: 100px;
   }
-  nav ul.nav-menu {
-    flex-direction: column;
+  input#searchInput {
+    width: 90%;
   }
 }
