--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ ul {
   list-style-type: disc;
   padding-left: 2rem;
 }
+.details li {
+  margin-bottom: 0.25rem;
+}
 footer {
   text-align: center;
   padding: 2rem;
