--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #162029;
   color: white;
@@ -17,7 +16,7 @@ header {
 h1, h2, h3, h4 {
   color: #e4a342;
 }
-input#searchInput {
+input#searchInput, select#categoryFilter {
   width: 80%;
   max-width: 500px;
   padding: 0.5rem;
@@ -55,11 +54,19 @@ footer {
   background-color: #10171e;
   font-size: 0.9rem;
 }
-@media (max-width: 768px) {
-  .logo {
-    width: 100px;
+.search-filter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+@media (min-width: 769px) {
+  .search-filter {
+    flex-direction: row;
+    justify-content: center;
   }
-  input#searchInput {
-    width: 90%;
+  input#searchInput,
+  select#categoryFilter {
+    margin: 0;
   }
 }
