--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #162029;
   color: white;
@@ -24,6 +23,8 @@ input#searchInput {
   margin: 1rem auto;
   display: block;
   font-size: 1rem;
+  border-radius: 4px;
+  border: none;
 }
 .category, .product {
   padding: 1rem 2rem;
